cmake_minimum_required(VERSION 3.0)
project(a4q3b)

add_executable(cc3k Animal.cc Barrier.cc BasicCell.cc Cell.cc CellDecorator.cc Compass.cc Display.cc Dragonborn.cc
        Dragon.cc Dwarf.cc Elf.cc Enemy.cc Floor.cc Human.cc Merchant.cc Observer.cc Orc.cc Phoenix.cc Pickup.cc
        Player.cc Potions.cc Subject.cc Treasure.cc Troll.cc Vampire.cc Werewolf.cc main.cc Goblin.cc)